# simpledali

./: README.md  build-hints.md  pyproject.toml  setup.cfg
docs/source/: conf.py  index.rst  requirements.txt
example/: .gitignore  README.md  dali2jsonl.toml  getid.py  ginormous_ms3.py  gorillaRecomp.py  readdali.py  readstats.py  readwrite_miniseed3.py  ring.conf  sendBzJsonPacket.py  sendJsonPacket.py  sendMSeed2File.py  sendMSeed3Packet.py  sendMSeedPacket.py  sourceid.py  testDali.py
example/ring/: .gitignore
src/simpledali/: __init__.py  abstractdali.py  dali2jsonl.py  dalipacket.py  exception.py  fdsnsourceid.py  gorilla.py  jsonencoder.py  jsonlarchive.py  miniseed.py  mseed2to3.py  mseed3.py  mseed3details.py  seedcodec.py  socketdali.py  util.py  websocketdali.py
tests/: test_convert2to3.py  test_dali2jsonl.py  test_gorilla.py  test_mseed2.py  test_mseed3.py
