[metadata]
name = simpledali
version = 0.2.1
author = Philip Crotwell
author_email = crotwell@seis.sc.edu
description = Datalink protocol in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crotwell/simple-dali
project_urls =
    Bug Tracker = https://github.com/crotwell/simple-dali/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7


[options.entry_points]
console_scripts =
  jsonlarchive = simpledali.jsonlarchive:main

[options.packages.find]
where = src
