[metadata]
name = simpledali
version = 0.7.0
author = Philip Crotwell
author_email = crotwell@seis.sc.edu
description = Datalink protocol, miniseed and miniseed3 in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crotwell/simple-dali
project_urls =
    Bug Tracker = https://github.com/crotwell/simple-dali/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
  defusedxml
  jwt
  websockets
  crc32c
  numpy
  tomli >= 1.1.0 ; python_version < "3.11"


[options.entry_points]
console_scripts =
  dali2jsonl = simpledali.dali2jsonl:main
  fdsnsourceid = simpledali.fdsnsourceid:main
  mseed3details = simpledali.mseed3details:main
  mseed2to3 = simpledali.mseed2to3:main

[options.packages.find]
where = src
